--- a/app/views/shared/_activities.html.erb
+++ b/app/views/shared/_activities.html.erb
@@ -1,6 +1,6 @@
 <%date = start_date
   while date<=end_date do %>
-  <div class="activities">
+  <div class="activities" style="padding-left: 10px">
     <% das = activities[date.strftime("%Y-%m-%d")].nil? ? [] : 
         activities[date.strftime("%Y-%m-%d")].sort_by{|t| t.start_time} %>
     <% if das.length > 0%>
@@ -8,7 +8,6 @@
         <div class="activity_list">
           <% das.each do |act| %>
               <%= render :partial => 'shared/activity', :object => act%>
-              <div class="clearBoth"></div>
           <%end%>
         </div>
         <div class="clearBoth"></div>
