--- a/app/views/layouts/unlogin_layout.html.erb
+++ b/app/views/layouts/unlogin_layout.html.erb
@@ -15,6 +15,8 @@
 <%= render(:partial => 'layouts/qmd')%>
 <div id="main_content">
 <div id="header">
+  <%= image_tag "footballboy3.jpg", :title=>"WeFootball", :id=>"header_icon" %>
+  
   <%= render(:partial => 'layouts/header_setting')%>
   <%= render(:partial => 'layouts/search_panel', :locals => {:default => :user})%>
 </div>
