--- a/app/views/shared/_activity.html.erb
+++ b/app/views/shared/_activity.html.erb
@@ -1,5 +1,6 @@
 <%if activity.class == Training%>
-  <div class="training_content">
+<div class="activity training_activity">
+  <div class="content">
     <%= link_to activity.team.shortname, team_view_path(activity.team.id) %>训练
     <br/><br/>
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
@@ -10,53 +11,42 @@
       <%links << link_to('我去', training_training_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user) %>
       <%links << link_to('我不去', training_training_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user) %>
     <%end%>
-    <%links << link_to('详情', training_path(activity)) if !(params[:controller] == "trainings" && params[:action] == "show")%>
+    <%links << link_to('训练详情', training_path(activity)) if !(params[:controller] == "trainings" && params[:action] == "show")%>
     <%= links_with_sticks links%>
   </div>
-  <div class="training_icon">
-    <%= small_team_image_link activity.team %>
+  <div class="activity_icon">
+    <%= team_image_link activity.team %>
   </div>
-<%elsif activity.class == SidedMatch%>
-  <div class="match_content">
-    <%= link_to activity.team.shortname, team_view_path(activity.team.id) %>训练
-    <br/><br/>
-    <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
-    <%= location_link activity.location, activity.football_ground_id %>
-    <br/><br/>
-    <%links = []%>
-    <%if logged_in? && (!@user || @user == current_user)%>
-      <%links << link_to('我去', sided_match_sided_match_join_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user) %>
-      <%links << link_to('我不去', sided_match_sided_match_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user) %>
-    <%end%>
-    <%links << link_to('详情', sided_match_path(activity))%>
-    <%= links_with_sticks links%>
-  </div>
-  <div class="training_icon">
-    <%= small_team_image_link activity.team %>
-  </div>
-<%elsif activity.class == Match%>
-  <div class="match_content">
+</div>
+<%elsif activity.class == Match || activity.class == SidedMatch%>
+<div class="activity match_activity">
+  <div class="content">
     <%= link_to(activity.host_team.shortname, team_view_path(activity.host_team_id))%>
     对阵
-    <%= link_to(activity.guest_team.shortname, team_view_path(activity.guest_team_id))%>
+    <%= activity.class == Match ? link_to(activity.guest_team.shortname, team_view_path(activity.guest_team_id)) : activity.guest_team_name%>
     <br/><br/>
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
     <%= location_link activity.location, nil%>
     <br/><br/>
-    <%= link_to('详情', match_path(activity)) if !(params[:controller] == "matches" && params[:action] == "show")%>  
+    <%= link_to('比赛详情', activity.class == Match ? match_path(activity) : sided_match_path(activity))%>  
   </div>
-  <div class="match_icon">
-    <%= small_team_image_link activity.host_team %> V.S.
-    <%= small_team_image_link activity.guest_team %>
+  <div class="activity_icon">
+    <%= small_team_image_link activity.host_team, :class=>"host_icon" %>
+    <%= image_tag("vs.gif", :title=>'V.S.', :class=>"vs")%>
+    <%= activity.class == Match ? 
+      small_team_image_link(activity.guest_team, :class=>"guest_icon") : 
+      image_tag('default_user_small.gif', :title=>activity.guest_team_name, :class=>"guest_icon") %>
   </div>
+</div>
 <%elsif activity.class == Play%>
-  <div class="match_content">
+<div class="activity play_activity">
+  <div class="content">
+    <%= smart_nickname @user if @user%>去<%= link_to_if !activity.football_ground_id.nil?, h(activity.location), football_ground_path(activity.football_ground_id)%>随便踢踢
+    <br/><br/>
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>
-    去<%= link_to_if !activity.football_ground_id.nil?, h(activity.location), football_ground_path(activity.football_ground_id)%>随便踢踢
     <br/><br/>
     <%if logged_in? && (!@user || @user == current_user)%>
       <%= play_status_with_logged_in(activity,current_user)%>
-      <br/><br/>
     <%else%>
       <%= play_status_with_unlogged_in(activity) %>
     <%end%>
@@ -68,4 +58,8 @@
     <%links << link_to('详情', play_path(activity)) if !(params[:controller] == "plays" && params[:action] == "show")%>
     <%=links_with_sticks links%>
   </div>
+  <div class="activity_icon">
+    <%= @user ? user_image_link(@user) : image_tag('default_user.gif', :title=>"") %>
+  </div>
+</div>
 <%end%>
