--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -32,9 +32,9 @@
       <%end%>
     </table>
     <div style="float:right;">
-      <%= submit_tag '删除'%>
-      <%= submit_tag '全选', :onclick => 'wefootball.checkAllInputs();return false;'%>
-      <%= submit_tag '全清', :onclick => 'wefootball.checkAllInputs(false);return false;'%>
+      <%= submit_tag '删除' %>
+      <%= submit_tag '选定全部', :onclick => 'wefootball.checkAllInputs();return false;'%>
+      <%= submit_tag '取消选定', :onclick => 'wefootball.checkAllInputs(false);return false;'%>
     </div>
   </div>
   <%end%>
