--- a/app/views/layouts/unlogin_layout.html.erb
+++ b/app/views/layouts/unlogin_layout.html.erb
@@ -6,6 +6,7 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%=h @title ? @title : '没事踢踢球儿才是正经事~'%></title>
   <%= javascript_include_tag "jquery-1.2.3.min.js" %>
+  <%= javascript_include_tag "jquery.dimensions.js" %>
   <%= javascript_include_tag "application" %>
   <%= yield :javascript%>
   <%= stylesheet_link_tag 'wefootball' %>
