--- a/app/views/sided_matches/show.html.erb
+++ b/app/views/sided_matches/show.html.erb
@@ -18,7 +18,7 @@
   </tr>
   <tr>
     <td>
-      <%= h @match.location%>
+        <%= location_link @match.location, @match.football_ground_id %>
     </td>
     <td style="text-align:right">
       <%= @match.size%>人制
