--- a/app/views/sided_matches/_form.html.erb
+++ b/app/views/sided_matches/_form.html.erb
@@ -1,3 +1,8 @@
+<%content_for(:javascript) do%>
+  <%= javascript_include_tag province_city_select_url %>
+  <%= javascript_include_tag football_ground_select_url %>
+<%end%>
+
 <table class="form">
   <tr ><td>
     对方球队名称:
@@ -10,9 +15,18 @@
     <%= f.datetime_select :start_time,  :start_year => Date.today.year, :end_year => 1.year.since.year, :use_month_numbers => true, :minute_step=>15 %>
   </td></tr>
   <tr><td>
-    地点:
+    选一块场地
   </td><td>
-    <%= f.text_field :location %>
+  <div class="location_input">
+    <p class="football_ground_input">
+      <%= f.football_ground_select :football_ground_id,@sided_match.football_ground_id.nil?  ? 'city' : nil,
+  @sided_match.football_ground_id.nil? ? @team.city : nil%>     
+      <%= link_to "提交新场地", new_football_ground_path(:back_uri => request.request_uri)%>
+    </p>
+    <p class="location_text_input">
+      <%= f.text_field :location, :value=> @sided_match.football_ground_id.nil? ? @sided_match.location : '' %> （如果场地不在列表中请在这里填写）
+    </p>
+  </div>
   </td></tr>
   <tr><td>
     比赛性质:
