--- a/app/views/match_joins/edit.html.erb
+++ b/app/views/match_joins/edit.html.erb
@@ -14,7 +14,7 @@
 <div style="float:right;width:392px" class="sect">
   <ul class="sidebar_menu">
     <li>
-    > <%= link_to '返回比赛', match_path(@match)%>
+    > <%= link_to '返回比赛详情', match_path(@match)%>
     </li>
   </ul>
   <div class="clearBoth"></div>
