--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -1,132 +1,61 @@
-<div>
-  <h1>比赛结果</h1>
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+    > <%= link_to '返回比赛详情', match_path(@match)%>
+    </li>
+  </ul>
 </div>
 
-<%= error_messages_for :match %>
+<div id="wide_left_content" class="sect">
+  <h2><%= h @title%></h2>
 
-<% form_for @match do |f| %>
-  
-<%= hidden_field_tag :team_id, @team.id%>  
+  <%= error_messages_for :match %>
+  <br/>
+  <% form_for @match do |f| %>
 
-      <%if @editing_by_host_team%>
-    <p>
-      <b><%=@match.host_team.shortname%></b>
-      <%= f.text_field :host_team_goal_by_host %>
-      :
-      <%= f.text_field :guest_team_goal_by_host %>
-      <b><%=@match.guest_team.shortname%></b>      
-    </p>
+    <%= hidden_field_tag :team_id, @team.id%>  
 
-    <%if !@match.host_team_goal_by_guest.nil? || !@match.guest_team_goal_by_guest.nil?%>
-      <p>
-        (对方填写的结果：
-        <b><%=@match.host_team.shortname%></b>
-        <%if !@match.host_team_goal_by_guest.nil?%>
-              <%=@match.host_team_goal_by_guest%>
-        <%end%>
-        :
-        <%if !@match.guest_team_goal_by_guest.nil?%>
-              <%=@match.guest_team_goal_by_guest%>
-        <%end%>
-        <b><%=@match.guest_team.shortname%></b> )
-      </p>
-      <p>
-        <%=link_to "我看行", match_path(@match,
-              :match=>{
-                 :host_team_goal_by_host=>@match.host_team_goal_by_guest,
-                 :guest_team_goal_by_host=>@match.guest_team_goal_by_guest
-              }), :method=>"put"%>
-      </p>
+    <%if @editing_by_host_team%>
+      <%= render :partial => 'result_form', :locals => {:f => f, :is_host_team => true}%>
+    <%else%>
+      <%= render :partial => 'result_form', :locals => {:f => f, :is_host_team => false}%>
     <%end%>
-    <p>
-      <b>赛况</b><br />
-      <%= f.radio_button(:situation_by_host,Match::SITUATIONS[0],{:checked=>true})%><%=situation_text(Match::SITUATIONS[0])%><br />
-      <%for s in Match::SITUATIONS[1..-1]%>
-          <%= f.radio_button(:situation_by_host,s)%><%=situation_text(s)%>
-          <%end%>
-        </p>
-        <%if !@match.situation_by_guest.nil?%>
-          <p>
-            (对方填写的结果：
-            <%=situation_text @match.situation_by_guest%>)
-          </p>       
-          <%=link_to "我看行", match_path(@match,
-                {:situation_by_host=>@match.situation_by_guest
-                }),:method=>"put"%>
-        <%end%>
-      <%else%>
-        <p>
-          <b><%=@match.host_team.shortname%></b>
-          <%= f.text_field :host_team_goal_by_guest %>
-          :
-          <%= f.text_field :guest_team_goal_by_guest %>
-          <b><%=@match.guest_team.shortname%></b>      
-        </p>
-        <%if !@match.host_team_goal_by_host.nil? || !@match.guest_team_goal_by_host.nil?%>
-          <p>
-            (对方填写的结果：
-            <b><%=@match.host_team.shortname%></b>
-            <%if !@match.host_team_goal_by_host.nil?%>
-                  <%=@match.host_team_goal_by_host%>
-            <%end%>
-            :
-            <%if !@match.guest_team_goal_by_host.nil?%>
-                  <%=@match.guest_team_goal_by_host%>
-            <%end%>
-            <b><%=@match.guest_team.shortname%></b> )
-          </p>
-          <p>
-            <%=link_to "我看行", match_path(@match,
-                  :match=>{
-                     :host_team_goal_by_guest => @match.host_team_goal_by_host,
-                     :guest_team_goal_by_guest => @match.guest_team_goal_by_host,
-                  }), :method=>"put"%>        
-          </p>
-        <%end%>
-        <p>
-          <b>赛况</b><br />
-          <%= f.radio_button(:situation_by_guest,Match::SITUATIONS[0],{:checked=>true})%><%=situation_text(Match::SITUATIONS[0])%><br />
-          <%for s in Match::SITUATIONS[1..-1]%>
-              <%= f.radio_button(:situation_by_guest,s)%><%=situation_text(s)%>
-          <%end%>
-        </p>
-        <%if !@match.situation_by_host.nil?%>
-          <p>
-          (对方填写的结果：
-           <%=situation_text @match.situation_by_host%>)
-          </p>       
-          <%=link_to "我看行", match_path(@match,
-           {:situation_by_guest=>@match.situation_by_host}), :method=>"put"%>
-         <%end%>    
+    <br />
+
+    进球数和得牌情况: <br/>
+    <table class='list' style="width: <%= @match.has_card ? '400px' : '290px'%>">
+      <th>&nbsp;</th>
+      <th style="width:80px">昵称</th>
+      <th style="width:60px">位置</th>
+      <th>进球数</th>
+      <%if @match.has_card%>
+        <th>红黄牌</th>
       <%end%>
 
-<hr />
-      <table>
-        <th>球员</th>
-        <th>位置</th>
-        <th>入球</th>
-        <th>红/黄牌</th>
-        <th>点评</th>
-        
-        <%for mj in @player_mjs%>
-         <tr>
-            <td><%= user_icon(mj.user)%></td>
-            <td><%= mj.position == nil ? "?" : formation_position_text(mj.position)%></td>
+      <%for mj in @player_mjs%>
+        <tr>
+          <td><%= tiny_user_image_link(mj.user)%></td>
+          <td style="width:80px"><%= link_to h(mj.user.nickname), user_view_path(mj.user)%></td>
+          <td style="width:60px"><%= formation_position_text mj.position %></td>
+          <td>
+            <%= text_field_tag "mj[#{mj.id}][goal]", 
+                @match_join_hash && @match_join_hash[mj.id.to_s] ? @match_join_hash[mj.id.to_s][:goal] : mj.goal, :size=>1%></td>
+          <%if @match.has_card%>
             <td>
-                <%= text_field_tag "mj[#{mj.id}][goal]", 
-                    @match_join_hash && @match_join_hash[mj.id.to_s] ? @match_join_hash[mj.id.to_s][:goal] : mj.goal%></td>
-            <td>
-                <%= select_tag "mj[#{mj.id}][cards]", 
-                    options_for_select(
-                        MatchJoin::CARDS.map {|c| [card_text(c), c]},
-                        @match_join_hash && @match_join_hash[mj.id.to_s] ? @match_join_hash[mj.id.to_s][:cards].to_i : mj.cards)
-                %>
+              <%= select_tag "mj[#{mj.id}][cards]", 
+                  options_for_select(
+                      MatchJoin::CARDS.map {|c| [card_text(c), c]},
+                      @match_join_hash && @match_join_hash[mj.id.to_s] ? @match_join_hash[mj.id.to_s][:cards].to_i : mj.cards)
+              %>
             </td>
-         </tr>
-        <%end%>
-      </table>
+          <%end%>
+        </tr>
+      <%end%>
+    </table>
 
-      <p>
-       <%= f.submit "提交比赛结果" %>
-      </p>
-    <% end %>
+    <p><%= f.submit "提交比赛结果" %></p>
+  <% end %>
+</div>
+
+<div class="clearBoth"></div>
