--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -15,15 +15,17 @@
 <%= select_minute @training.end_time.nil? ? nil : @training.end_time.min, :prefix => "end_time", :minute_step=>15 %></p>
 
 <div class="location_input">
-  <p class="football_ground_input"><label for="football_ground_id">选择场地</label><br/>
+  <label for="football_ground_id">选择场地</label><br/>
+  <div class="football_ground_input">
     <%= f.football_ground_select :football_ground_id, 
       @training.football_ground_id.nil?  ? 'city' : nil,
-      @training.football_ground_id.nil? ? @team.city : nil%>    
-    <%= link_to "提交新场地", new_football_ground_path(:back_uri => request.request_uri)%>
-  </p>
-  <p class="location_text_input">
-    <%= f.text_field :location, :value=> @training.football_ground_id.nil? ? @training.location : '' %> （如果场地不在列表中请在这里填写）
-  </p>
+      @training.football_ground_id.nil? ? @team.city : nil%>
+    <a class="switch" href="javascript:void(0)">场地不在列表中, 点击此处填写地点</a>
+  </div>
+  <div class="location_text_input">
+    <%= f.text_field :location, :value=> @training.football_ground_id.nil? ? @training.location : '' %>
+    &nbsp;&nbsp;<a class="switch" href="javascript:void(0)">从列表中选择场地</a>
+  </div>
 </div>
   
 <p><label for="summary">训练说明</label><br/>
