--- a/app/views/layouts/_match_menu.html.erb
+++ b/app/views/layouts/_match_menu.html.erb
@@ -8,8 +8,7 @@
   <div class="l2_menu_list">
     <ul></ul>
     <ul>
-      <li><%= link_to("确定参加的成员", '#')%></li>
-      <li><%= link_to '可能参加的成员', '#' %></li>
+      <li><%= link_to("参加的成员", '#')%></li>
       <li><%= link_to '讨论',  match_team_posts_path(match, match.host_team_id) %></li>
       <%if logged_in? %>
         <%if match.can_be_edited_formation_by?(current_user, match.host_team_id)%>
@@ -21,8 +20,7 @@
       <%end%>
     </ul>
     <ul>
-      <li><%= link_to("确定参加的成员", '#')%></li>
-      <li><%= link_to '可能参加的成员', '#' %></li>
+      <li><%= link_to("参加的成员", '#')%></li>
       <li><%= link_to '讨论',  match_team_posts_path(match, match.guest_team_id) %></li>
       <%if logged_in? %>
         <%if match.can_be_edited_formation_by?(current_user, match.guest_team_id)%>
