--- a/app/views/match_invitations/index_need_reply.html.erb
+++ b/app/views/match_invitations/index_need_reply.html.erb
@@ -37,27 +37,7 @@
             <%end%>
           </table>
           <br/>
-          <table class="match_invitation_list">
-            <tr>
-              <td style="width:60px">&nbsp;</td>
-              <td>对方提出的新建议</td>
-              <td>我队上次提出的建议</td>
-            </tr>
-            <%= macth_invitation_comparison_tr(mi, '时间', :start_time){ |t| 
-              %(#{t.strftime('%Y-%m-%d %H:%M')}
-                #{"(已过期)" if mi.outdated?}
-              )
-            }%>
-            <%= macth_invitation_comparison_tr(mi, '地点', :location){ |t| h t}%>
-            <%= macth_invitation_comparison_tr(mi, '比赛性质', :match_type){ |t| match_type_text t}%>
-            <%= macth_invitation_comparison_tr(mi, '人数', :size){ |t| "#{t}人制"}%>
-            <%= macth_invitation_comparison_tr(mi, '半场时长', :half_match_length){ |t| "#{t}分钟"}%>
-            <%= macth_invitation_comparison_tr(mi, '中间休息', :rest_length){ |t| "#{t}分钟"}%>
-            <%= macth_invitation_comparison_tr(mi, '裁判', :has_judge){ |t| t ? '有' : '没有'}%>
-            <%= macth_invitation_comparison_tr(mi, '红黄牌', :has_card){ |t| t ? '有' : '没有'}%>
-            <%= macth_invitation_comparison_tr(mi, '越位', :has_offside){ |t| t ? '有' : '没有'}%>
-            <%= macth_invitation_comparison_tr(mi, '平局后', :win_rule){ |t| win_rule_text t}%>
-          </table>
+          <%= render :partial => 'properties_list', :locals => {:mi => mi}%>
 
           <div style="margin: 10px 0 10px 10px">
             <%links = []%>
